src/test/ui/extern-const.stderr
error: extern items cannot be `const`
  --> $DIR/extern-const.rs:14:5
   |
LL |     const C: u8; //~ ERROR extern items cannot be `const`
   |     ^^^^^ help: instead try using: `static`

error: aborting due to previous error

